part1/1.7/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: captainlevi20/log-output:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
